# cubeshell

./: .gitignore  CMakeLists.txt
certs/: cacert.srl  generate.sh  node.csr  node.key
cli/: CMakeLists.txt
cli/src/: main.cpp
conf/: node.json
core/: CMakeLists.txt
core/src/: main.cpp
db/: cubeshell.users.admin.json
libcubeshellconfig/: CMakeLists.txt
libcubeshellconfig/include/: cubeshellconfig.h
libcubeshellconfig/include/cubeshellconfig/: IConfig.h  MConfigVar.h
libcubeshellconfig/include/shellcubeconfig/: IConfig.h  MConfigVar.h
libcubeshellconfig/src/: CConfig.cpp  CConfig.h  cubeshellconfig.cpp
libcubeshelldb/: CMakeLists.txt
libcubeshelldb/include/: cubeshelldb.h
libcubeshelldb/include/cubeshelldb/: IDatabase.h
libcubeshelldb/src/: CDatabase.cpp  CDatabase.h  cubeshelldb.cpp
libshellcubedb/: CMakeLists.txt
libshellcubedb/include/: shellcubedb.h
libshellcubedb/include/shellcubedb/: IDatabase.h
libshellcubedb/src/: CDatabase.cpp  CDatabase.h
node/: CMakeLists.txt
node/src/: MCommand.h  MContainer.h  MNode.h  MUsage.h  cli_server.cpp  cli_server.h  commands.cpp  commands.h  machineres.cpp  machineres.h  main.cpp  main.h
